JumpScript/tests/baselines/reference/externalModuleRefernceResolutionOrderInImportDeclaration.errors.txt
tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file3.jump(4,7): error TS2339: Property 'bar' does not exist on type 'typeof "tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file1"'.


==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file3.jump (1 errors) ====
    ///<reference path='externalModuleRefernceResolutionOrderInImportDeclaration_file2.jump'/>
    import file1 = require('./externalModuleRefernceResolutionOrderInImportDeclaration_file1');
    file1.foo();
    file1.bar();
          ~~~
!!! error TS2339: Property 'bar' does not exist on type 'typeof "tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file1"'.
    
    
==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file1.jump (0 errors) ====
    export function foo() { };
    
==== tests/cases/compiler/externalModuleRefernceResolutionOrderInImportDeclaration_file2.jump (0 errors) ====
    declare module "externalModuleRefernceResolutionOrderInImportDeclaration_file1" {
        export function bar();
    }
    
    